# phrasedreamgpt

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dreamphrasegpt.py  foundationgpt.py  package-lock.json  package.json  phrasedreamgpt.py  pyproject.toml  run_js_bundle.js
.github/workflows/: deploy-pages.yml
docs/research/: attention-residuals.md
dreamphrasegpt/: __init__.py  artifacts.py  benchmarking.py  cli.py  config.py  interactive.py  runtime.py  source_filter.py
models/english_names/: english_names.model  english_names.model.pt
models/english_words/: english_words.model  english_words.model.pt
models/us_baby_names/: us_baby_names.model.pt
phrasedreamgpt/: __init__.py  __main__.py  artifacts.py  cli.py  config.py  interactive.py  runtime.py
results/: non_us_baby_names.txt  nonenglish_names.txt  nonenglish_words.txt
scripts/: benchmark_residual_modes.py  run_js_bundle.js
site/: index.html  package-lock.json  package.json  vite.config.ts
site/src/: App.tsx  index.css  main.tsx
site/src/components/: model-panel.tsx
site/src/components/ui/: progress.tsx  tabs.tsx
site/src/hooks/: use-media-query.ts
site/src/lib/: app-theme.tsx  dreamphrase-browser.ts  model-catalog.ts  model-results.ts  theme.ts
tests/: test_dreamphrasegpt.py  test_phrasedreamgpt.py
