[project]
name = "phrasedreamgpt"
version = "0.1.0"
description = "A single-file Character Language Model (CLM) trainer and inference script."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch",
]

[project.optional-dependencies]
dev = [
  "mdformat>=0.7.22",
  "mdformat-gfm>=0.3.6",
  "pre-commit>=4.4.0",
  "ruff>=0.14.11",
]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
  "models",
  ".venv",
  ".tmp",
  ".cache",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
docstring-code-format = true
