[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dreamphrasegpt"
version = "0.1.0"
description = "A character-level transformer trainer and inference toolkit for newline-delimited text."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "torch",
]

[project.scripts]
dreamphrasegpt = "dreamphrasegpt.cli:run"

[project.optional-dependencies]
dev = [
  "mdformat>=0.7.22",
  "mdformat-gfm>=0.3.6",
  "pre-commit>=4.4.0",
  "ruff>=0.14.11",
]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
  "models",
  ".venv",
  ".tmp",
  ".cache",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
docstring-code-format = true

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
include = ["dreamphrasegpt*"]
